Fix slideshow covering install button.

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -308,6 +308,7 @@ ul.logos {
     position: relative;
     left: 10px;
     top: 0px;
+    width: 526px;
     height: 325px;
     overflow: hidden;
   }
